<?xml version="1.0" encoding="UTF-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    		  android:id="@+id/forecast_item"
    		  android:layout_width="match_parent"
    		  android:layout_height="wrap_content"
    		  android:orientation="vertical"
    		  android:layout_margin="2dp"
    		  android:background="@drawable/cityitembackground"
    		  android:padding="8dp">
	<android.support.v7.widget.AppCompatTextView android:id="@+id/dateholder"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:textSize="16sp"
			  android:textStyle="bold"
			  android:singleLine="true"
			  android:textColor="#4545ee"/>
	
	<RelativeLayout android:layout_width="match_parent"
	    		    android:layout_height="wrap_content">
		<android.support.v7.widget.AppCompatTextView android:id="@+id/temp_label"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_alignParentLeft="true"
				  android:layout_centerInParent="true"
				  android:text="@string/temperature_label"
				  android:textSize="16sp"
				  android:textColor="#4545ee"/>
		<android.support.v7.widget.AppCompatTextView android:id="@+id/temp"
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:layout_centerInParent="true"
		    	android:layout_alignParentRight="true"
		    	android:textSize="16sp"
				android:textColor="#4545ee"/>
	</RelativeLayout>
	
	<RelativeLayout android:layout_width="match_parent"
	    		    android:layout_height="wrap_content">
		<android.support.v7.widget.AppCompatTextView android:id="@+id/pressure_label"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_alignParentLeft="true"
				  android:layout_centerInParent="true"
				  android:text="@string/pressure_label"
				  android:textSize="16sp"
				  android:textColor="#4545ee"/>
		<android.support.v7.widget.AppCompatTextView android:id="@+id/pressure"
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:layout_centerInParent="true"
		    	android:layout_alignParentRight="true"
		    	android:textSize="16sp"
				android:textColor="#4545ee"/>
	</RelativeLayout>
	
	<RelativeLayout android:layout_width="match_parent"
	    		    android:layout_height="wrap_content">
		<android.support.v7.widget.AppCompatTextView android:id="@+id/humidity_label"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_alignParentLeft="true"
				  android:layout_centerInParent="true"
				  android:text="@string/humidity_label"
				  android:textSize="16sp"
				  android:textColor="#4545ee"/>
		<android.support.v7.widget.AppCompatTextView android:id="@+id/humidity"
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:layout_centerInParent="true"
		    	android:layout_alignParentRight="true"
		    	android:textSize="16sp"
				android:textColor="#4545ee"/>
	</RelativeLayout>
	
	<RelativeLayout android:layout_width="match_parent"
	    		    android:layout_height="wrap_content">
		<android.support.v7.widget.AppCompatTextView android:id="@+id/wind_label"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_alignParentLeft="true"
				  android:layout_centerInParent="true"
				  android:text="@string/wind_speed_label"
				  android:textSize="16sp"
				  android:textColor="#4545ee"/>
		<android.support.v7.widget.AppCompatTextView android:id="@+id/wind_speed"
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:layout_centerInParent="true"
		    	android:layout_alignParentRight="true"
		    	android:textSize="16sp"
				android:textColor="#4545ee"/>
	</RelativeLayout>
	
	<RelativeLayout android:layout_width="match_parent"
	    		    android:layout_height="wrap_content">
		<android.support.v7.widget.AppCompatTextView android:id="@+id/description_label"
				  android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_alignParentLeft="true"
				  android:layout_centerInParent="true"
				  android:text="@string/description_label"
				  android:textSize="16sp"
				  android:textColor="#4545ee"/>
		<android.support.v7.widget.AppCompatTextView android:id="@+id/description"
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:layout_centerInParent="true"
		    	android:layout_alignParentRight="true"
		    	android:textSize="16sp"
				android:textColor="#4545ee"/>
	</RelativeLayout>
	
</android.support.v7.widget.LinearLayoutCompat>	